--- a/applications/notes.html
+++ b/applications/notes.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
     <link rel="stylesheet" href="../styles.css/notes.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
-    <h1>Tus Notas</h1>
-        <div class="note">
-            <h2 class="note__title">Note 01.</h2>
+        <h1>Tus Notas</h1>
+        <form class="note">
+            <h2 class="note__title">Nota 01.</h2>
             <textarea name="note__text" id="note__text" placeholder="Escribe sobre mí" cols="35" rows="10"></textarea>
             <button class="note__button" type="reset">Añadir nota</button>
-        </div>
-
+        </form>
     </main>
-
 </body>
 </html>
