--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Tres iframes ocultos, solo se muestra el que corresponde -->
     <iframe id="frame1" class="app-frame" src="./applications/notes.html"></iframe>
-    <iframe id="frame2" class="app-frame" src="apps/homeworks.html"></iframe>
+    <iframe id="frame2" class="app-frame" src="applications/homeworks.html"></iframe>
     <iframe id="frame3" class="app-frame" src="apps/weather.html"></iframe>
 
 </body>
