--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Radios ocultos -->
     <header>
         <nav class="navbar">
-            <input type="radio" name="app" id="app1" checked>
+            <input type="radio" name="app" id="app1">
             <label for="app1">Notas</label>
             <input type="radio" name="app" id="app2">
             <label for="app2">Tareas</label>
@@ -18,10 +18,27 @@
             <label for="app3">Clima</label>
         </nav>
     </header>
-    <main>
-        <iframe id="frame1" class="app-frame" src="./applications/notes.html"></iframe>
-        <iframe id="frame2" class="app-frame" src="apps/homeworks.html"></iframe>
-        <iframe id="frame3" class="app-frame" src="./applications/weather.html"></iframe>
+    <main class="content">
+        <div class="content__item">
+            <div class="bar">
+                <h2>Notas</h2>
+                <input type="radio" name="close" id="close">
+                <label for="close">X</label>
+            </div>
+            <iframe id="frame1" class="app-frame" src="./applications/notes.html"></iframe>
+        </div>
+        <div class="bar">
+            <h2>Tareas</h2>
+            <input type="radio" name="close" id="close">
+            <label for="close">X</label>
+            <iframe id="frame2" class="app-frame" src="applications/homeworks.html"></iframe>
+        </div>
+        <div class="bar">
+            <h2>Clima</h2>
+            <input type="radio" name="close" id="close">
+            <label for="close">X</label>
+            <iframe id="frame3" class="app-frame" src="./applications/weather.html"></iframe>
+        </div>
     </main>
 </body>
 </html>
